Menambahkan icon instagram .html & styling icon instagram .css

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                     <div class='icon-social-media'>
                         <a href='mailto: panjinmaulana@gmail.com'><i class='fa-solid fa-envelope fa-2xl'></i></a>
                         <a href='https://linkedin.com/in/panji-maulana/'><i class='fa-brands fa-linkedin fa-2xl'></i></a>
-                        <a href='https://github.com/panjinmaulana'><i class='fa-brands fa-github fa-2xl'></i></a>
+                        <a href='https://github.com/panjinmaulana/'><i class='fa-brands fa-github fa-2xl'></i></a>
+                        <a href='https://www.instagram.com/panjinmaulana/'><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     </div>
                 </section>
             </div>
