change directory path folder images, style and file index.js

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel="shortcut icon" href="assets/image/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <title>My Profile | Panji Maulana</title>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='assets/styles/style.css'>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
                     </section>
                     <section class='img-bio'>
                         <figure>
-                            <img src='assets/image/panji-maulana.jpg' alt='panji maulana' width='50%'>
+                            <img src='assets/images/panji-maulana.jpg' alt='panji maulana' width='50%'>
                         </figure>
                     </section>
                 </div>
@@ -102,7 +102,7 @@
                 <div class='portfolio-card'>
                     <div class='card'>
                         <figure>
-                            <img src='assets/image/theater-24.jpg' alt='Theater 24' width='100%'>
+                            <img src='assets/images/theater-24.jpg' alt='Theater 24' width='100%'>
                             <figcaption>
                                 This is a web about movies built on a technology stack using Vue, 3rd Party API (The
                                 Movie Database), PostgreSQL, Express.js, Node.js, Midtrans.
@@ -112,7 +112,7 @@
                     </div>
                     <div class='card'>
                         <figure>
-                            <img src='assets/image/customer-storepedia.jpg' alt='Customer Storepedia' width='100%'>
+                            <img src='assets/images/customer-storepedia.jpg' alt='Customer Storepedia' width='100%'>
                             <figcaption>
                                 This is a web about customer e-commerce built on a technology stack using Vue,
                                 PostgreSQL, Express.js, Node.js.
@@ -122,7 +122,7 @@
                     </div>
                     <div class='card'>
                         <figure>
-                            <img src='assets/image/cms-storepedia.jpg' alt='CMS Storepedia' width='100%'>
+                            <img src='assets/images/cms-storepedia.jpg' alt='CMS Storepedia' width='100%'>
                             <figcaption>
                                 This is a web about customer CMS built on a technology stack using Vue, PostgreSQL,
                                 Express.js, Node.js.
@@ -171,7 +171,7 @@
         </section>
     </footer>
 
-    <script src='index.js'></script>
+    <script src='assets/index.js'></script>
     <script src='https://kit.fontawesome.com/30586b5899.js' crossorigin='anonymous'></script>
 </body>
 
